##########################
# Setup.py Configuration #
##########################
[metadata]
name = cell
version = 0.0.1-dev

# Author information
author = Holger Heidrich
author_email = holger.heidrich@uni-tuebingen.de

# License Information
license = MIT
license_file = LICENSE

# Search information
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
install_requires =
    torch
    scipy
    sklearn
    networkx
    powerlaw

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
